# sampleRFZ

./: CMakeLists.txt  LICENSE  README.md
NamelistTemplates/: SourceList.cmake  sampleRFZ.template
Source/: Source.cmake  sampleRFZ_Functions.cmake
Source/Utilities/: CMakeLists.txt  sampleRFZ.f90
Source/sampleRFZLib/: CMakeLists.txt  mod_crystallography.f90  mod_global.f90  mod_math.f90  mod_quaternions.f90  mod_rotations.f90  mod_so3.f90
Source/sampleRFZLib/cmake/: sampleRFZConfig.cmake
Source/sampleRFZLib/program_mods/: mod_sampleRFZ.f90
Support/CPack/: PackageProject.cmake
Support/ExtLib/: ExtLibraries.cmake
resources/: SourceList.cmake  templatecodes.txt
